--- a/Build_IT_Web/ClientApp/src/index.html
+++ b/Build_IT_Web/ClientApp/src/index.html
@@ -6,7 +6,8 @@
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145269450-1"></script>
   <script>
